@@ -2,6 +2,8 @@ package com.bnpparibas.sit.fresh.rds.rds04.crf.back.application.leverage.dto;
 
 import com.bnpparibas.sit.fresh.rds.rds04.crf.back.domain.leverage.value.LeverageFormType;
 
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 
@@ -30,7 +32,7 @@ public record FormState(
 
     public FormState {
         visibleQuestions = visibleQuestions == null ? List.of() : List.copyOf(visibleQuestions);
-        flags = flags == null ? Map.of() : Map.copyOf(flags);
+        flags = flags == null ? Map.of() : Collections.unmodifiableMap(new LinkedHashMap<>(flags));
     }
 
     public enum Status { IN_PROGRESS, COMPLETED }
@@ -47,7 +49,7 @@ public record FormState(
 
         public OutcomeView {
             formsToShow = formsToShow == null ? List.of() : List.copyOf(formsToShow);
-            flags = flags == null ? Map.of() : Map.copyOf(flags);
+            flags = flags == null ? Map.of() : Collections.unmodifiableMap(new LinkedHashMap<>(flags));
         }
     }
 }
