@@ -2,6 +2,8 @@ package com.bnpparibas.sit.fresh.rds.rds04.crf.back.domain.leverage.value;
 
 import com.bnpparibas.sit.pact.annotations.design.domain.DomainDrivenDesign;
 
+import java.util.Collections;
+import java.util.LinkedHashMap;
 import java.util.Map;
 
 /**
@@ -17,6 +19,6 @@ import java.util.Map;
 public record Effect(RecommendationOutcome setOutcome, Map<String, String> flags, boolean terminal) {
 
     public Effect {
-        flags = flags == null ? Map.of() : Map.copyOf(flags);
+        flags = flags == null ? Map.of() : Collections.unmodifiableMap(new LinkedHashMap<>(flags));
     }
 }
